@@ -1,87 +1,53 @@
 package net.handytrack.HANDYTRACKMAIN;
 
+import net.handytrack.database.DBmanipulation;
+
+import java.util.*;
 import javax.swing.*;
-import javax.swing.filechooser.FileNameExtensionFilter;
 import java.awt.*;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
-import java.awt.event.MouseAdapter;
-import java.awt.event.MouseEvent;
-import java.io.File;
-import java.io.Serializable;
-import java.nio.file.Files;
-import java.sql.Connection;
-import java.sql.DriverManager;
-import java.sql.PreparedStatement;
+import java.awt.event.*;
+import java.io.*;
+import java.sql.*;
+import javax.swing.filechooser.FileNameExtensionFilter;
 
 public class profile extends JPanel implements ActionListener, Serializable {
 
     private circle c;
-    private JLabel lname, ltel, email, allname, logo;
-    //   private DBConnect db;
+    private JLabel lname, ltel;
+ //   private DBConnect db;
     private String p, name, pass, num;
-    private JPanel p1, p2, p3, p4;
+
     private int keyuser;
 
     public profile() {
-        // ปรับ
-        this.setLayout(new GridLayout(3, 1));
-        this.setBackground(Color.WHITE);
-        lname = new JLabel("Welcome Mr.Sutthipong", (int) Component.CENTER_ALIGNMENT);
-
-        ltel = new JLabel("TEL :", (int) Component.CENTER_ALIGNMENT);
+        this.setLayout(new BoxLayout(this, BoxLayout.Y_AXIS)); // ปรับ
+        this.setBackground(new Color(210, 224, 251));
+        lname = new JLabel("NAME : ");
+        ltel = new JLabel("TEL :");
         c = new circle();
         c.setSize(new Dimension(150, 150));
         name = "";
         pass = "";
         num = "";
-        p1 = new JPanel();
-        p2 = new JPanel();
-        p3 = new JPanel();
-        p4 = new JPanel();
-        email = new JLabel("", (int) Component.CENTER_ALIGNMENT);
-        allname = new JLabel("", (int) Component.CENTER_ALIGNMENT);
-        logo = new JLabel("HandyTrack", new ImageIcon("resources/Picture/smalllogo.png"), (int) Component.CENTER_ALIGNMENT);
-        logo.setFont(new Font("Aerial", Font.PLAIN, 28));
+        this.setPreferredSize(new Dimension(200, 200));
+
         c.addMouseListener(new MouseAdapter() {
             @Override
             public void mouseClicked(MouseEvent e) {
                 actionPerformed(new ActionEvent(c, ActionEvent.ACTION_PERFORMED, null));
             }
         });
-
-        p1.setLayout(new GridLayout(2, 1));
-        p2.add(logo);
-        p2.setBackground(Color.WHITE);
-        p1.setBackground(Color.WHITE);
-        p1.add(p2);
-        p1.add(lname);
-        p4.setLayout(new GridLayout(4, 1));
-        p4.add(allname);
-        p4.add(ltel);
-        p4.add(email);
-        p3.setBackground(new Color(210, 224, 251));
-        p4.add(p3);
-        this.add(p1);
         this.add(c);
-        this.add(p4);
+        this.add(Box.createVerticalStrut(10));
+        this.add(lname);
+        this.add(ltel);
 
     }
-
-    public JLabel getLname() {
+    public JLabel getLname(){
         return lname;
     }
-
-    public JLabel getLtel() {
+    public JLabel getLtel(){
         return ltel;
-    }
-
-    public JLabel getEmail() {
-        return email;
-    }
-
-    public JLabel getAllname() {
-        return allname;
     }
 
     public void actionPerformed(ActionEvent e) {
@@ -102,17 +68,16 @@ public class profile extends JPanel implements ActionListener, Serializable {
                     c.setIcon(image); // กำหนดภาพใหม่ในวงกลม
                     c.repaint();
                     p = path;
-                    System.out.println(this.p);
-                    System.out.println(this.keyuser);
                 }
             }
             //การอัพเดดภาพลงบน sql
             Connection dom = DriverManager.getConnection("jdbc:sqlite:resources/DB.db");
             PreparedStatement ps = dom.prepareStatement("UPDATE login SET profile = ? WHERE iduser = ?");
-            File lm = new File(p);
-            byte[] imageBytes = Files.readAllBytes(lm.toPath());
-            ps.setBytes(1, imageBytes);
-            ps.setInt(2, this.keyuser);
+
+
+//            byte[] imageBytes = lm.readAllBytes();
+            ps.setBlob(1,new FileInputStream(p));
+            ps.setInt(2,this.keyuser);
             ps.executeUpdate();
 //                ps.executeQuery();
             JOptionPane.showMessageDialog(null, "Data Inserted");
@@ -159,10 +124,7 @@ public class profile extends JPanel implements ActionListener, Serializable {
     public void settel(String s) {
         ltel.setText(s);
     }
-
-    public void setKeyuser(int i) {
+    public void setKeyuser(int i){
         this.keyuser = i;
     }
-
-
 }
